deployment/terraform/container-service.tf
#
# ECS Resources
#

# ECS cluster is only a name that ECS machines may join
resource "aws_ecs_cluster" "container_instance" {
  lifecycle {
    create_before_destroy = true
  }

  name = "${var.project_id}-ecs${var.environment}Cluster"
}

resource "aws_security_group" "container_instance" {
  vpc_id = "${module.vpc.id}"

  tags {
    Name        = "sgContainerInstance"
    Project     = "${var.project}"
    Environment = "${var.environment}"
  }
}

resource "aws_security_group_rule" "container_instance_all_http_ingress" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id = "${aws_security_group.container_instance.id}"
  cidr_blocks       = ["${var.vpc_external_access_cidr_block}"]
}

resource "aws_security_group_rule" "container_instance_bastion_ssh_ingress" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  security_group_id        = "${aws_security_group.container_instance.id}"
  source_security_group_id = "${module.vpc.bastion_security_group_id}"
}

resource "aws_security_group_rule" "container_instance_alb_all_ingress" {
  type                     = "ingress"
  from_port                = 0
  to_port                  = 65535
  protocol                 = "tcp"
  security_group_id        = "${aws_security_group.container_instance.id}"
  source_security_group_id = "${aws_security_group.server_app_alb.id}"
}

resource "aws_security_group_rule" "container_instance_all_egress" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  security_group_id = "${aws_security_group.container_instance.id}"
  cidr_blocks       = ["${var.vpc_external_access_cidr_block}"]
}

data "template_file" "container_instance_cloud_config" {
  template = "${file("cloud-config/ecs-user-data.yml")}"

  vars {
    ecs_cluster_name = "${aws_ecs_cluster.container_instance.name}"
    environment      = "${var.environment}"
  }
}

#
# AutoScaling resources
#

# Defines a launch configuration for ECS worker, associates it with our cluster
resource "aws_launch_configuration" "ecs" {
  lifecycle {
    create_before_destroy = true
  }

  name                        = "ECS ${aws_ecs_cluster.container_instance.name}"
  image_id                    = "${var.aws_ecs_ami}"
  instance_type               = "${var.ecs_instance_type}"
  key_name                    = "${var.aws_key_name}"
  iam_instance_profile        = "${aws_iam_instance_profile.container_instance.name}"
  security_groups             = ["${aws_security_group.container_instance.id}"]
  associate_public_ip_address = true

  #user_data = "${data.template_file.container_instance_cloud_config.rendered}"
  user_data = "#!/bin/bash\necho ECS_CLUSTER='${aws_ecs_cluster.container_instance.name}' > /etc/ecs/ecs.config"
}

# Auto-scaling group for ECS workers
resource "aws_autoscaling_group" "ecs" {
  lifecycle {
    create_before_destroy = true
  }

  # Explicitly linking ASG and launch configuration by name
  # to force replacement on launch configuration changes.
  name = "${aws_launch_configuration.ecs.name}"

  launch_configuration      = "${aws_launch_configuration.ecs.name}"
  health_check_grace_period = 600
  health_check_type         = "EC2"
  desired_capacity          = "${var.desired_instance_count}"
  min_size                  = "${var.desired_instance_count}"
  max_size                  = "${var.desired_instance_count}"
  vpc_zone_identifier       = ["${module.vpc.private_subnet_ids}"]

  # vpc_zone_identifier       = ["${var.vpc_subnet_ids}"]

  tag {
    key                 = "Name"
    value               = "${var.project_id}-ContainerInstance"
    propagate_at_launch = true
  }
  tag {
    key                 = "Project"
    value               = "${var.project}"
    propagate_at_launch = true
  }
  tag {
    key                 = "Environment"
    value               = "${var.environment}"
    propagate_at_launch = true
  }
}
